# ct-iot-things-report-request-service

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: DESIGN.md  DIAGRAMS.md
src/: config.py  constants.py
src/things_report_request_service/: __main__.py  db.py  service.py
src/util/: service_util.py
tests/: conftest.py  pytest-cov.ini
tests/helper/: request_helper.py
tests/integration/: request_consumer_test.py
